[workspace]
resolver = "2"

members = [
    "rustnn",
    "webnn-graph",
    "webnn-onnx-utils",
]

exclude = [
    "trtx-rs",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustnn"

[workspace.dependencies]
# Common dependencies can be defined here and inherited by member crates

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
